--- a/style.css
+++ b/style.css
@@ -7,6 +7,31 @@
           box-sizing: border-box;
 }
 
+#menu {
+  background-image: url(./img/menu.png);
+  background-size: contain;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  #menu {
+    display: block;
+    margin: 0 10px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #menu {
+    margin: 0 20px;
+    background-size: contain;
+    width: 40px;
+    height: 40px;
+  }
+}
+
 nav {
   display: -ms-grid;
   display: grid;
@@ -18,6 +43,28 @@ nav {
   padding: 35px 0;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  nav {
+    -ms-grid-columns: 100% 0;
+        grid-template-columns: 100% 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  nav {
+    padding: 20px 0;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  nav #link {
+    display: none;
+  }
 }
 
 nav #link a {
@@ -37,6 +84,12 @@ nav #link a:hover {
           transform: scale(1.2);
 }
 
+@media screen and (max-width: 1024px) {
+  nav #social {
+    display: none;
+  }
+}
+
 nav #social a {
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -52,6 +105,29 @@ nav #social a:hover {
 nav #social a img {
   width: 22px;
   vertical-align: -20px;
+}
+
+.logo {
+  font-weight: 100;
+  -webkit-transition: 0.5s !important;
+  transition: 0.5s !important;
+  font-size: 36px !important;
+  letter-spacing: 3px;
+  padding-left: 3px;
+}
+
+.logo:hover {
+  -webkit-transform: scale(1.5) !important;
+          transform: scale(1.5) !important;
+}
+
+.logo span {
+  vertical-align: 3px;
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
 }
 
 #banner .slick-prev {
@@ -79,6 +155,12 @@ nav #social a img {
   color: #f8f8f8;
 }
 
+@media screen and (max-width: 1024px) {
+  #banner .banner1 {
+    background-size: cover;
+  }
+}
+
 #banner .banner1:focus {
   outline: none;
 }
@@ -91,6 +173,12 @@ nav #social a img {
   height: 100vh;
   text-align: center;
   color: #f8f8f8;
+}
+
+@media screen and (max-width: 1024px) {
+  #banner .banner2 {
+    background-size: cover;
+  }
 }
 
 #banner .banner2:focus {
@@ -107,6 +195,12 @@ nav #social a img {
   color: #f8f8f8;
 }
 
+@media screen and (max-width: 1024px) {
+  #banner .banner3 {
+    background-size: cover;
+  }
+}
+
 #banner .banner3:focus {
   outline: none;
 }
@@ -118,9 +212,31 @@ nav #social a img {
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.45);
 }
 
+@media screen and (max-width: 1024px) {
+  #banner h1 {
+    padding: 550px 0 50px 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #banner h1 {
+    font-size: 32px;
+    padding: 380px 0 50px 20px;
+  }
+}
+
 #banner h2 {
   font-size: 24px;
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.45);
+}
+
+@media screen and (max-width: 767px) {
+  #banner h2 {
+    font-size: 16px;
+    width: 60%;
+    margin: 0 auto;
+    line-height: 2;
+  }
 }
 
 #news {
@@ -129,12 +245,27 @@ nav #social a img {
   padding: 100px 0;
 }
 
+@media screen and (max-width: 1024px) {
+  #news {
+    width: 100%;
+    padding: 50px 20px;
+  }
+}
+
 #news #news-content {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  #news #news-content {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 50px;
+  }
 }
 
 #news #news-content .news-card {
@@ -292,24 +423,5 @@ footer {
   padding: 30px 0 20px;
   font-size: 30px;
   font-weight: 900;
-}
-
-.logo {
-  font-weight: 100;
-  -webkit-transition: 0.5s !important;
-  transition: 0.5s !important;
-  font-size: 36px !important;
-  letter-spacing: 3px;
-  padding-left: 3px;
-}
-
-.logo:hover {
-  -webkit-transform: scale(1.3) !important;
-          transform: scale(1.3) !important;
-}
-
-.logo span {
-  vertical-align: 3px;
-  font-size: 30px;
 }
 /*# sourceMappingURL=style.css.map */
