--- a/style.scss
+++ b/style.scss
@@ -5,12 +5,35 @@ $color-white: #f8f8f8;
 $color-black: #252525;
 $text-shadow: 0 2px 5px rgba(0, 0, 0, 0.45);
 $box-shawod: 0 5px 10px rgba(0, 0, 0, 0.5);
+$pc: 1025px;
+$tablet: 1024px;
+$mobile: 767px;
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans TC';
     box-sizing: border-box;
+}
+
+#menu {
+    background-image: url(./img/menu.png);
+    background-size: contain;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    display: none;
+    @media screen and (max-width: $tablet) {
+        display: block;
+        margin: 0 10px;
+    }
+
+    @media screen and (max-width: $mobile) {
+        margin: 0 20px;
+        background-size: contain;
+        width: 40px;
+        height: 40px;
+    }
 }
 
 nav {
@@ -21,8 +44,19 @@ nav {
     background: $color-white;
     padding: 35px 0;
     box-shadow: $box-shawod;
-
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    @media screen and (max-width: $tablet) {
+        grid-template-columns: 100% 0;
+    }
+    @media screen and (max-width: $mobile) {
+        padding: 20px 0;
+    }
     #link {
+        @media screen and (max-width: $tablet) {
+            display: none;
+        }
         a {
             color: $color-black;
             text-decoration: none;
@@ -40,6 +74,9 @@ nav {
     }
 
     #social {
+        @media screen and (max-width: $tablet) {
+            display: none;
+        }
         a {
             transition: 0.3s;
             padding: 0 10px;
@@ -56,7 +93,24 @@ nav {
     }
 }
 
+.logo {
+    font-weight: 100;
+    transition: 0.5s !important;
+    font-size: 36px !important;
+    letter-spacing: 3px;
+    padding-left: 3px;
+    &:hover {
+        transform: scale(1.5) !important;
+    }
 
+    span {
+        vertical-align: 3px;
+        font-size: 30px;
+    }
+}
+a{
+    text-decoration: none;
+}
 
 #banner {
     .slick-prev {
@@ -80,6 +134,9 @@ nav {
             height: 100vh;
             text-align: center;
             color: $color-white;
+            @media screen and (max-width: $tablet) {
+                background-size: cover;
+            }
             &:focus {
                 outline: none;
             }
@@ -90,10 +147,23 @@ nav {
         font-size: 72px;
         letter-spacing: 20px;
         text-shadow: $text-shadow;
+        @media screen and (max-width: $tablet) {
+            padding: 550px 0 50px 20px;
+        }
+        @media screen and (max-width: $mobile) {
+            font-size: 32px;
+            padding: 380px 0 50px 20px;
+        }
     }
     h2 {
         font-size: 24px;
         text-shadow: $text-shadow;
+        @media screen and (max-width: $mobile) {
+            font-size: 16px;
+            width: 60%;
+            margin: 0 auto;
+            line-height: 2;
+        }
     }
 }
 
@@ -103,10 +173,19 @@ nav {
     margin: 0 auto;
     padding: 100px 0;
 
+    @media screen and (max-width: $tablet) {
+        width: 100%;
+        padding: 50px 20px;
+    }
+
     #news-content {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 20px;
+        @media screen and (max-width: $mobile) {
+            grid-template-columns: 1fr;
+            grid-gap: 50px;
+        }
 
         .news-card {
             box-shadow: $box-shawod;
@@ -262,21 +341,4 @@ footer {
     padding: 30px 0 20px;
     font-size: 30px;
     font-weight: 900;
-}
-
-.logo {
-    font-weight: 100;
-    transition: 0.5s !important;
-    font-size: 36px !important;
-    letter-spacing: 3px;
-    padding-left: 3px;
-
-    &:hover {
-        transform: scale(1.3) !important;
-    }
-
-    span {
-        vertical-align: 3px;
-        font-size: 30px;
-    }
 }
